--- a/style/body.css
+++ b/style/body.css
@@ -3,3 +3,8 @@ body {
     flex-direction: column;
     min-height: 100vh;
 }
+
+@font-face {
+    font-family: "shrift";
+    src: url("ofont.ru_Bootshaus.ttf");
+}
