--- a/style/footer.css
+++ b/style/footer.css
@@ -2,4 +2,22 @@ footer {
     background-color: rgb(151, 197, 99);
 /*     margin-top: auto; */
     height: 250px;
+    width: 85%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.footer__info {
+    display: flex;
+}
+
+.footer__emblems img {
+    width: 50px;
+}
+
+.footer__emblems {
+    display: flex;
 }
