--- a/style/main.css
+++ b/style/main.css
@@ -25,3 +25,32 @@ main {
 .main__vacancy-item p {
     font-size: 25px;
 }
+
+.main__category {
+    border: 1px solid rgb(151, 197, 99);
+    box-shadow: 1px 1px 11px;
+    margin: 20px;
+    padding: 13px;
+    font-family: "shrift";
+    height: fit-content;
+}
+
+.main__ad {
+    border: 1px solid rgb(151, 197, 99);
+    height: 43%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: fit-content;
+}
+
+.main__ad img {
+    height: 50%;
+
+}
+
+.main__left_block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
