--- a/style/main.css
+++ b/style/main.css
@@ -10,6 +10,8 @@ main {
 
 .main__vacancy-item {
     border: 1px solid rgb(151, 197, 99);
+    background: #ffffff;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(64, 189, 120, 1) 100%);
     font-family: "shrift";
     width: 95%;
     padding: 25px;
@@ -28,16 +30,19 @@ main {
 
 .main__category {
     border: 1px solid rgb(151, 197, 99);
+    background: #ffffff;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(58, 217, 50, 1) 100%);
     box-shadow: 1px 1px 11px;
     margin: 20px;
     padding: 13px;
     font-family: "shrift";
     height: fit-content;
+    width: 375px;
 }
 
 .main__ad {
     border: 1px solid rgb(151, 197, 99);
-    height: 43%;
+    height: 37%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -46,11 +51,26 @@ main {
 
 .main__ad img {
     height: 50%;
-
+    width: 100%;
 }
 
 .main__left_block {
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: fit-content;
+}
+
+.pic2 {
+    height: 10px;
+}
+
+.main__category h1 {
+    margin-left: 30px;
+}
+
+.main__ad hr {
+    width: 100%;
+    background-color: rgb(151, 197, 99);
+    height: 5px;
 }
